@@ -1,3 +1,8 @@
+Next release
+------------
+
+- Add IResultSet interface definition.
+
 0.1a3 (2013-01-10)
 ------------------
 
